# karpenter-ai-agent

./: CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  llm_client.py  main.py  models.py  parser.py  pyproject.toml  requirements.txt  rules.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.mmd  rag.md  rules.md
docs/architecture/: karpenter-ai-agent-architecture.drawio
docs/karpenter/: ec2nodeclass-network-and-iam.md  nodepool-and-nodeclass.md  spot-consolidation-and-disruption.md
docs/knowledge/aws/: ec2-ami-selection.md  ec2-subnet-security.md  eks-node-iam.md
docs/knowledge/karpenter/: common-misconfigs.md  consolidation-disruption.md  ec2nodeclass-iam.md  ec2nodeclass-selectors.md  instance-families-graviton.md  nodepool-vs-provisioner.md  spot-requirements.md  ttl-after-empty.md
scripts/: render_diagrams.sh
src/karpenter_ai_agent/: __init__.py  parser_compat.py
src/karpenter_ai_agent/agents/: __init__.py  _adapters.py  base.py  coordinator_agent.py  cost_agent.py  evaluator.py  evaluator_agent.py  parser_agent.py  (+2 more)
src/rag/: __init__.py
templates/: report_export.html  results.html
tests/: test_agents_cost.py  test_agents_parser.py  test_agents_reliability.py  test_agents_security.py  test_evaluator.py  test_explanation_flow.py  test_exports.py  test_orchestration_flow.py  test_patch_bundler.py  test_rag.py  test_rag_integration.py  test_rag_llm_prompt.py  test_rag_retrieval.py
tests/fixtures/: ec2nodeclass-ami.yaml  nodepool-nodeclass.yaml
(+25 files in other folders)
