[project]
name = "karpenter-ai-agent"
version = "0.1.0"
description = "Deterministic rules + AI summaries for Karpenter Provisioners, NodePools, and EC2NodeClasses"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
